# src/product-api/handlers/post.go
@@ -6,6 +6,14 @@ import (
 	"github.com/berkayhellagun/microservice/src/product-api/data"
 )
 
+// swagger:route POST /products products addProduct
+// Add new Product
+//
+// responses:
+//	200: productResponse
+// 422: errorValidation
+// 501: errorResponse
+
 func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle POST Products")
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
